--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
-  <link rel="stylesheet" href="./vendor/fonts/inter.css">
   <title>Путешествия по России</title>
 </head>
 <body>
@@ -120,13 +118,13 @@
         </div>
       </section>
       
-      <section>
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala"  target="_blank" class="cover">
-          <h3 class="cover__title">До Байкала «на собаках»</h3>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-          <img src="./sprint-3-images/cover-trains.jpg" class="cover__background" alt="вокзал">
-          <div class="cover__overlay"></div>
-        </a>
+      <section class="cover">
+          <div class="cover__background">
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__overlay">
+              <h3 class="cover__title">До Байкала «на собаках»</h3>
+              <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            </a>
+          </div>
       </section>
     </main>
 
