--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <div class="place">
           <article class="place__title">Куршская коса</article>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="http://park-kosa.ru" target="_blank" class="place__website__link">park-kosa.ru</a>
+            <p class="place__url-heading">URL</p>
+            <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
           </div>
           <img class="place__image" src="./sprint-3-images/place-kosa.jpg" alt="куршская коса">
           <div class="place__paragraphs">
@@ -66,8 +66,8 @@
         <div class="place">
           <article class="place__title">Кольский</article>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__website__link">National Geographic</a>
+            <p class="place__url-heading">URL</p>
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="place__link">National Geographic</a>
           </div> 
           <img class="place__image" src="./sprint-3-images/place-kolsky.jpg" alt="кольский">
           <div class="place__paragraphs">
@@ -80,8 +80,8 @@
         <div class="place">
           <article class="place__title">Алтай</article>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__website__link">Facebook</a>
+            <p class="place__url-heading">URL</p>
+            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="place__link">Facebook</a>
           </div>
           <img class="place__image" src="./sprint-3-images/place-altai.jpg" alt="алтай">
           <div class="place__paragraphs">
@@ -92,8 +92,8 @@
         <div class="place">
           <article class="place__title">Зимний Байкал</article>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="https://vk.com/baikalmile" target="_blank" class="place__website__link">https://vk.com/baikalmile</a>
+            <p class="place__url-heading">URL</p>
+            <a href="https://vk.com/baikalmile" target="_blank" class="place__link">https://vk.com/baikalmile</a>
           </div>
           <img class="place__image" src="./sprint-3-images/place-winter-baikal.jpg" alt="зимний байкал">
           <div class="place__paragraphs">
@@ -106,8 +106,8 @@
         <div class="place">
           <article class="place__title">Карелия</article>
           <div class="place__website">
-            <p class="place__website_url-heading">URL</p>
-            <a href="http://vodlozero.ru" target="_blank" class="place__website__link">http://vodlozero.ru/</a>
+            <p class="place__url-heading">URL</p>
+            <a href="http://vodlozero.ru" target="_blank" class="place__link">http://vodlozero.ru/</a>
           </div>
           <img class="place__image" src="./sprint-3-images/place-karelia.jpg" alt="карелия">
           <div class="place__paragraphs">
