--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <img src="./sprint-3-images/header-logo.svg" alt="логотип" class="header__logo">
       <ul class="header__lang-links">
-        <li class="header__lang-link header__lang-link_active">Ru</li>
+        <li class="header__lang-link">Ru</li>
         <li class="header__lang-link">En</li>
       </ul>
     </header>
@@ -35,19 +35,21 @@
         </ul>
       </section>
 
-      <section class="photo-grid">
-        <img src="./sprint-3-images/photo-grid-train.jpg" alt="поезд" class="photo-grid__item">
-        <img src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="вид с высоты" class="photo-grid__item">
-        <img src="./sprint-3-images/photo-grid-tuman.jpg" alt="туман" class="photo-grid__item">
-        <img src="./sprint-3-images/photo-grid-sochi.jpg" alt="сочи" class="photo-grid__item">
-        <img src="./sprint-3-images/photo-grid-arisa.jpg" alt="колесо" class="photo-grid__item">
-        <img src="./sprint-3-images/photo-grid-baikal.jpg" alt="байкал" class="photo-grid__item">
-        <img src="./sprint-3-images/photo-grid-elbrus.jpg" alt="эльбрус" class="photo-grid__item">
-        <img src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="знак" class="photo-grid__item">
-        <img src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="камчатка" class="photo-grid__item">
-        <img src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="камчатка в тумане" class="photo-grid__item">
-        <img src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="горы на байкале" class="photo-grid__item">
-        <img src="./sprint-3-images/photo-grid-ergaki.jpg" alt="горы в тумане" class="photo-grid__item">
+      <section>
+        <u1 class="photo-grid">
+          <li><img src="./sprint-3-images/photo-grid-train.jpg" alt="поезд" class="photo-grid__item"></li>
+          <li><img src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="вид с высоты" class="photo-grid__item"></li>
+          <li><img src="./sprint-3-images/photo-grid-tuman.jpg" alt="туман" class="photo-grid__item"></li>
+          <li><img src="./sprint-3-images/photo-grid-sochi.jpg" alt="сочи" class="photo-grid__item"></li>
+          <li><img src="./sprint-3-images/photo-grid-arisa.jpg" alt="колесо" class="photo-grid__item"></li>
+          <li><img src="./sprint-3-images/photo-grid-baikal.jpg" alt="байкал" class="photo-grid__item"></li>
+          <li><img src="./sprint-3-images/photo-grid-elbrus.jpg" alt="эльбрус" class="photo-grid__item"></li>
+          <li><img src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="знак" class="photo-grid__item"></li>
+          <li><img src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="камчатка" class="photo-grid__item"></li>
+          <li><img src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="камчатка в тумане" class="photo-grid__item"></li>
+          <li><img src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="горы на байкале" class="photo-grid__item"></li>
+          <li><img src="./sprint-3-images/photo-grid-ergaki.jpg" alt="горы в тумане" class="photo-grid__item"></li>
+        </u1>
       </section>
 
       <section class="places">
@@ -119,16 +121,15 @@
       </section>
       
       <section class="cover">
-        <div class="cover__background">
           <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__overlay">
-            <h3 class="cover__title">До Байкала «на собаках»</h3>
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
           </a>
-        </div>
       </section>
     </main>
 
-    <footer class="footer">
+    <footer>
+      <nav class="footer">
         <ul class="footer__links">
           <li><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
           <li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
@@ -137,6 +138,7 @@
           <li><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
         </ul>
         <p class="footer__copyright">&copy;2021. Андрей Денисов</p>
+      </nav>
     </footer>
   </div>
 </body>
