fixed after review

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <img src="./sprint-3-images/header-logo.svg" alt="логотип" class="header__logo">
       <ul class="header__lang-links">
-        <li class="header__lang-link">Ru</li>
+        <li class="header__lang-link header__lang-link_active">Ru</li>
         <li class="header__lang-link">En</li>
       </ul>
     </header>
@@ -35,8 +35,8 @@
         </ul>
       </section>
 
-      <section>
-        <u1 class="photo-grid">
+      <section class="photo-grid">
+        <ul class="photo-grid">
           <li><img src="./sprint-3-images/photo-grid-train.jpg" alt="поезд" class="photo-grid__item"></li>
           <li><img src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="вид с высоты" class="photo-grid__item"></li>
           <li><img src="./sprint-3-images/photo-grid-tuman.jpg" alt="туман" class="photo-grid__item"></li>
@@ -49,7 +49,7 @@
           <li><img src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="камчатка в тумане" class="photo-grid__item"></li>
           <li><img src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="горы на байкале" class="photo-grid__item"></li>
           <li><img src="./sprint-3-images/photo-grid-ergaki.jpg" alt="горы в тумане" class="photo-grid__item"></li>
-        </u1>
+        </ul>
       </section>
 
       <section class="places">
